--- a/package.json
+++ b/package.json
@@ -93,5 +93,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/long": "npm:long@latest"
   }
 }
