--- a/package.json
+++ b/package.json
@@ -12,26 +12,8 @@
     "deploy:preview": "vercel",
     "deploy:firebase": "npm run build && firebase deploy --only hosting",
     "images": "tsx scripts/generate-service-images.ts",
-    "images:generate": "tsx scripts/generate-service-images.ts generate",
-    "images:optimize": "tsx scripts/generate-service-images.ts optimize",
-    "images:component": "tsx scripts/generate-service-images.ts component",
-    "ai:generate": "tsx scripts/generate-ai-images.ts",
-    "ai:check": "tsx -e \"import { checkAvailableServices } from './scripts/ai-image-generator.js'; checkAvailableServices();\"",
-    "pro:images": "tsx scripts/generate-pro-images.ts",
-    "google:check": "tsx -e \"import { checkGoogleSetup } from './scripts/google-image-generator.js'; checkGoogleSetup();\"",
-    "google:generate": "tsx -e \"import { generateAllGoogleImages } from './scripts/google-image-generator.js'; generateAllGoogleImages();\"",
-    "google:simple": "tsx scripts/google-imagen-simple.ts",
-    "google:imagefx": "tsx scripts/google-imagen-simple.ts imagefx",
-    "process:watch": "node scripts/process-downloaded-images.js watch",
-    "process:batch": "node scripts/process-downloaded-images.js batch",
-    "imagen2:check": "tsx -e \"import { checkImagen2Setup } from './scripts/google-imagen2-premium.js'; checkImagen2Setup();\"",
-    "imagen2:generate": "tsx -e \"import { generateGooglePremiumImages } from './scripts/google-imagen2-premium.js'; generateGooglePremiumImages();\"",
-    "imagen2:single": "tsx -e \"const [c,s] = process.argv.slice(2); import('./scripts/google-imagen2-premium.js').then(m => m.generateSpecificImagen2(c,s));\"",
-    "imagen2:equipment": "tsx -e \"import { generateGoogleImagesNoPeople } from './scripts/google-imagen2-no-people.js'; generateGoogleImagesNoPeople();\"",
-    "ai-designer": "tsx scripts/ai-graphic-designer.ts",
-    "generate-asset": "tsx scripts/generate-asset.ts",
-    "generate-service-images": "tsx scripts/ai-graphic-designer.ts batch -f scripts/services-list.txt -t serviceCard",
-    "generate-all-services": "tsx scripts/generate-all-service-images.ts"
+    "generate:images": "tsx scripts/generate-images.ts",
+    "convert:images": "tsx scripts/convert-to-webp.ts"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
