perf: Add comprehensive memory and build optimizations
- Enhanced .vercelignore to exclude more unnecessary files
- Added webpack optimizations for better bundle splitting
- Optimized Next.js config with SWC minification and CSS optimization
- Improved image copy script to skip unchanged files
- Updated Vercel build config to use npm ci for faster installs
- Disabled Next.js telemetry to reduce overhead
- Set memory limit to 4GB (matching NODE_OPTIONS env var)

--- a/.vercelignore
+++ b/.vercelignore
@@ -27,3 +27,29 @@ ai-*.ts
 generate-*.ts
 *-generator.ts
 *-generation.ts
+
+# Ignore extra image variations we don't need
+public/images/services/*/*-2.webp
+public/images/services/*/*-3.webp
+public/images/services/*/*-4.webp
+public/images/services/*/*-2.png
+public/images/services/*/*-3.png
+public/images/services/*/*-4.png
+public/images/services/*/*-large.webp
+public/images/services/*/*-large.png
+public/images/services/*/*-mobile.jpg
+public/images/services/*/*-card.jpg
+public/images/services/*/*-thumbnail.jpg
+
+# Ignore development and test files
+cypress/
+e2e/
+__tests__/
+__mocks__/
+coverage/
+.turbo
+*.map
+storybook-static/
+.storybook/
+*.stories.tsx
+*.stories.ts
