perf: Implement aggressive memory optimizations for build
- Added dynamic imports for heavy components (reduces initial bundle)
- Implemented aggressive tree shaking and dead code elimination
- Added webpack optimizations: sideEffects, concatenateModules, runtimeChunk
- Optimized Vercel configuration with build caching and region selection
- Created import optimization analysis script
- Added minimal build script for production
- Set function memory limits to prevent OOM
- Marked package as side-effect free for better tree shaking

These changes should significantly reduce memory usage during build.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "leila-frontend",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "dev": "next dev",
     "build": "npm run copy:images && next build",
