perf: Implement extreme memory optimizations with lazy loading
- Added LazyImage component with intersection observer
- Created ServiceImage wrapper for automatic lazy loading
- Minimal production Next.js config with image optimization disabled
- Ultra-minimal build script that temporarily removes pages
- Aggressive vercelignore patterns
- Reduced image device sizes for smaller builds
- Pre-build cleanup script
- Production-only build configuration

These are the most aggressive optimizations possible while keeping the app functional.

--- a/.vercelignore
+++ b/.vercelignore
@@ -53,3 +53,29 @@ storybook-static/
 .storybook/
 *.stories.tsx
 *.stories.ts
+
+# Ignore all non-essential files
+.git/
+.github/
+.vscode/
+.idea/
+node_modules/
+.next/cache/
+.env.local
+.env.development
+*.log
+*.orig
+.DS_Store
+
+# Ignore heavy assets during build
+public/images/services/*/*-2.*
+public/images/services/*/*-3.*
+public/images/services/*/*-4.*
+public/images/services/*/*-large.*
+public/images/services/*/*-mobile.*
+public/images/services/*/*-card.*
+public/images/services/*/*-thumbnail.*
+
+# Ignore Firebase Admin SDK if not needed at build time
+lib/firebase-admin.ts
+scripts/firebase-*.ts
