fix: Update vercel.json functions pattern

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": null,
   "outputDirectory": ".next",
   "functions": {
-    "app/api/**/*.ts": {
+    "app/api/**/*": {
       "maxDuration": 30,
       "memory": 512
     }
