fix: Use inline build command to avoid script execution issues
- Changed from script file to inline commands
- Removed --omit=dev to ensure all dependencies are available
- Increased memory to 4GB
- Simple rm commands before build

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "buildCommand": "./scripts/emergency-build.sh",
-  "installCommand": "npm ci --prefer-offline --no-audit --omit=dev",
+  "buildCommand": "rm -rf .next && rm -rf node_modules/.cache && NODE_OPTIONS='--max-old-space-size=4096' next build",
+  "installCommand": "npm ci --prefer-offline --no-audit",
   "framework": "nextjs",
   "outputDirectory": ".next",
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1",
-    "NODE_ENV": "production",
-    "NODE_OPTIONS": "--max-old-space-size=3072"
+    "NODE_ENV": "production"
   },
   "regions": ["iad1"]
 }
