--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "npm run copy:images && next build",
-    "build:production": "./scripts/prebuild.sh && next build -c next.config.production.js",
+    "build:production": "bash scripts/prebuild.sh && next build -c next.config.production.js",
+    "build:emergency": "rm -rf .next && NODE_OPTIONS='--max-old-space-size=4096' next build",
     "copy:images": "tsx scripts/copy-web-images.ts",
     "start": "next start",
     "lint": "next lint",
