fix: Major web app cleanup and fixes
- Fixed Vercel build error by removing shared-assets dependency
- Fixed broken navigation links (404 page now links to existing routes)
- Fixed image loading issues by correcting paths and mappings
- Fixed mobile responsiveness and viewport settings
- Created placeholder PWA icons to fix manifest warnings
- Removed automatic mobile redirect for better UX
- Added safe storage utilities for SSR compatibility
- Re-enabled TypeScript and ESLint build checks
- Fixed service image mappings to match actual file names
- Updated ServiceCard to use correct image component

All major issues are now resolved and the app should build and deploy successfully.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "sideEffects": false,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run copy:images && next build",
+    "build": "next build",
     "build:production": "bash scripts/prebuild.sh && next build -c next.config.production.js",
     "build:emergency": "rm -rf .next && NODE_OPTIONS='--max-old-space-size=4096' next build",
     "copy:images": "tsx scripts/copy-web-images.ts",
