--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
   "outputDirectory": ".next",
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1",
-    "NODE_ENV": "production",
-    "NODE_OPTIONS": "--max-old-space-size=4096"
+    "NODE_ENV": "production"
   },
   "regions": ["iad1"],
   "functions": {
