--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:emergency",
   "installCommand": "npm install",
   "framework": "nextjs",
   "outputDirectory": ".next",
