--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
-    "sharp": "^0.34.2",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
@@ -70,6 +69,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.2"
   },
   "overrides": {
     "@types/long": "npm:long@latest"
